# sonarcloud-test-c-cpp

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.c
